apps/staging/firefly-pico/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly-pico
  namespace: firefly-pico
spec:
  ingressClassName: traefik
  rules:
    - host: "fflypico.ctimms.net"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: firefly-pico
                port:
                  number: 80
